Fixed alignment of labels in template for "Other" proof test dropdown selection.

--- a/fid-web/src/main/webapp/style/pageStyles/event.css
+++ b/fid-web/src/main/webapp/style/pageStyles/event.css
@@ -205,16 +205,17 @@
 	width: 250px;
 }
 
+#proofTestManual{
+	padding: 0;
+}
+
 #proofTestManual label {
 	width:120px;
 	padding-left:0px;
 	clear:left;
+	text-align: left;
 }
 
-#proofTestManual span {
-	width:350px;
-	
-}
 #proofTestUploadFile {
 	height:20px;
 }
